fix(overflow): Revert the overflowing of content since it doesn't suit us atm

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -116,10 +116,6 @@
 
   .nav-link {
     display: block;
-    max-width: 8rem;
-    // Todo : commented because not working w/ "active selector" for active nav-link
-    // overflow: hidden;
-    text-overflow: ellipsis;
     white-space: nowrap;
 
     &.nav-icon {
